# fx-tools

./: .gitmodules  DiffFX_Derivation.ipynb  DiffFX_Examples.ipynb  DiffFX_Experiments.ipynb  FX_Experiments.ipynb  README.md  TODO.md  difffx.py  dynamo_mnist.py  example_transformer.py  fx_print.py  fx_shnty.py  fx_shnty_propagators.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_difffx.py  test_diffx.py  test_shnty.py  vjp_check.py  vjp_rules.py
docs/: DiffFX_Derivation.ipynb  DiffFX_Examples.ipynb  DiffFX_Experiments.ipynb  FX_Experiments.ipynb  pipe.md
examples/: dynamo_transformer.py  example_transformer.py
src/fxtools/: __init__.py  difffx.py  fx_print.py  fx_shnty.py  fx_shnty_propagators.py  method_to_function.py  pipe.py  savegraph.py  vjp_check.py  vjp_rules.py
test/: test_difffx.py  test_shnty.py  test_vjp_check.py
